# game.libretro.dosbox

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
depends/common/dosbox/: 0001-Build-with-std-gnu-11.patch  0001-Fix-infinite-loop-on-exit.patch  0002-Fix-libretro-print-screen-button.patch  CMakeLists.txt  dosbox.txt
depends/common/doxbox/: CMakeLists.txt  dosbox.txt
game.libretro.dosbox/: addon.xml  addon.xml.in
game.libretro.dosbox/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.dosbox/resources/language/English/: strings.po
game.libretro.dosbox/resources/language/resource.language.af_za/: strings.po
game.libretro.dosbox/resources/language/resource.language.am_et/: strings.po
game.libretro.dosbox/resources/language/resource.language.ar_dz/: strings.po
game.libretro.dosbox/resources/language/resource.language.ar_sa/: strings.po
game.libretro.dosbox/resources/language/resource.language.ast_es/: strings.po
game.libretro.dosbox/resources/language/resource.language.az_az/: strings.po
game.libretro.dosbox/resources/language/resource.language.be_by/: strings.po
game.libretro.dosbox/resources/language/resource.language.bg_bg/: strings.po
game.libretro.dosbox/resources/language/resource.language.bs_ba/: strings.po
game.libretro.dosbox/resources/language/resource.language.ca_es/: strings.po
game.libretro.dosbox/resources/language/resource.language.cs_cz/: strings.po
game.libretro.dosbox/resources/language/resource.language.cy_gb/: strings.po
game.libretro.dosbox/resources/language/resource.language.da_dk/: strings.po
game.libretro.dosbox/resources/language/resource.language.de_de/: strings.po
game.libretro.dosbox/resources/language/resource.language.el_gr/: strings.po
game.libretro.dosbox/resources/language/resource.language.en_au/: strings.po
game.libretro.dosbox/resources/language/resource.language.en_gb/: strings.po
game.libretro.dosbox/resources/language/resource.language.en_nz/: strings.po
game.libretro.dosbox/resources/language/resource.language.en_us/: strings.po
game.libretro.dosbox/resources/language/resource.language.eo/: strings.po
game.libretro.dosbox/resources/language/resource.language.es_ar/: strings.po
game.libretro.dosbox/resources/language/resource.language.es_es/: strings.po
game.libretro.dosbox/resources/language/resource.language.es_mx/: strings.po
game.libretro.dosbox/resources/language/resource.language.et_ee/: strings.po
game.libretro.dosbox/resources/language/resource.language.eu_es/: strings.po
game.libretro.dosbox/resources/language/resource.language.fa_af/: strings.po
game.libretro.dosbox/resources/language/resource.language.fa_ir/: strings.po
game.libretro.dosbox/resources/language/resource.language.fi_fi/: strings.po
game.libretro.dosbox/resources/language/resource.language.fo_fo/: strings.po
game.libretro.dosbox/resources/language/resource.language.fr_ca/: strings.po
game.libretro.dosbox/resources/language/resource.language.fr_fr/: strings.po
game.libretro.dosbox/resources/language/resource.language.gl_es/: strings.po
game.libretro.dosbox/resources/language/resource.language.he_il/: strings.po
game.libretro.dosbox/resources/language/resource.language.hi_in/: strings.po
game.libretro.dosbox/resources/language/resource.language.hr_hr/: strings.po
game.libretro.dosbox/resources/language/resource.language.hu_hu/: strings.po
game.libretro.dosbox/resources/language/resource.language.hy_am/: strings.po
game.libretro.dosbox/resources/language/resource.language.id_id/: strings.po
game.libretro.dosbox/resources/language/resource.language.is_is/: strings.po
game.libretro.dosbox/resources/language/resource.language.it_it/: strings.po
game.libretro.dosbox/resources/language/resource.language.ja_jp/: strings.po
game.libretro.dosbox/resources/language/resource.language.kl_gl/: strings.po
gameclient.dosbox/: addon.xml
(+41 files in other folders)
